--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
         <item>BLOG</item>
         <item>LOGIN</item>
         <item>ABOUT US</item>
-        <item>CONTACT</item>
+        <item>CONTACT US</item>
 
 
     </string-array>
